crash_log.txt
Traceback (most recent call last):
  File "D:\Dev\APP\StuffStorageManager\run_app.py", line 44, in <module>
    from frontend.ui import MainWindow
  File "D:\Dev\APP\StuffStorageManager\frontend\ui.py", line 1677
    def refresh_debt_table(self):
                                 ^
IndentationError: unindent does not match any outer indentation level
